--- a/manuscrit_G_LEFEBVRE/chap_analyse_heterogeneite.tex
+++ b/manuscrit_G_LEFEBVRE/chap_analyse_heterogeneite.tex
@@ -1,6 +1,5 @@
 \documentclass[main.tex]{subfiles}
 
-
 \begin{document}
 
 %\custompart{Quantifier l'\hetero d'une tumeur à partir d'une image}{Comment ? Par quel biais? Exploration de différents critères.}{Dans cette partie, on propose d'examiner en détail le caractère \heterogene de nos images - les images médicales ainsi que les images produites numériquement avec le modèle EDP. Dans un premier temps, nous présenterons la construction d'histogrammes des niveaux de gris contenus dans l'image. Dans un second temps, nous décrirons ces histogrammes par un mélange de gaussienne. Enfin ce mélange gaussien sera utilisé pour calculer différents critères qui seront comparés. }
@@ -43,6 +42,112 @@ Remarquons que, comme montré sur la figure~\ref{fig:contourage_sain}, le logici
 Pour les histogrammes numériques, seul une image est reconstruite par la simulation. Le contour quant à lui va être définit à partir des fichiers de sorties des simulations qui stockent la densité des différentes populations en chaque maille de notre modèle EDP. En utilisant la reconstruction en niveau de gris détaillée au chapitre précédent, on peut fournir une image en niveaux de gris à partir de ces valeurs. En ce qui concerne le contour, il sera définit par seuillage sur le tissu sain~: si la proportion de tissu sain est inférieur à un pourcentage donné, alors on considèrera que l'on est à l'intérieur de la tumeur, sinon on est à l'extérieure. Nous avons donc également dans cas, une image en niveaux de gris et une ROI. Le code C++ pour la partie clinique peut être réutilisé et produira ainsi les histogrammes numériques.
 
 \subsection{Traitements appliqués aux histogrammes~: fit par un mélange bi-gaussien}
+
+\newlength{\largeurfignber}
+\setlength{\largeurfignber}{0.19\textwidth}
+\begin{figure}
+\centering
+\subfloat[Jour 0]{\includegraphics[width=\largeurfignber]{dcm_img/Nber_2008_05_20_scan_contour.png}}\ 
+\subfloat[Jour 119]{\includegraphics[width=\largeurfignber]{dcm_img/Nber_2008_09_16_scan_contour.png}}\ 
+\subfloat[Jour 209]{\includegraphics[width=\largeurfignber]{dcm_img/Nber_2008_12_15_scan_contour.png}}\ 
+\subfloat[Jour 275]{\includegraphics[width=\largeurfignber]{dcm_img/Nber_2009_02_19_scan_contour.png}}\ 
+\subfloat[Jour 331]{\includegraphics[width=\largeurfignber]{dcm_img/Nber_2009_04_16_scan_contour.png}}\ 
+\subfloat[Jour 406]{\includegraphics[width=\largeurfignber]{dcm_img/Nber_2009_06_30__slice-244_85_scan_contour.png}}\ 
+\subfloat[Jour 493]{\includegraphics[width=\largeurfignber]{dcm_img/Nber_2009_09_25_scan_contour.png}}\ 
+\subfloat[Jour 535]{\includegraphics[width=\largeurfignber]{dcm_img/Nber_2009_11_06_scan_contour.png}}\ 
+\subfloat[Jour 611]{\includegraphics[width=\largeurfignber]{dcm_img/Nber_2010_01_21_scan_contour.png}}\ 
+\subfloat[Jour 688]{\includegraphics[width=\largeurfignber]{dcm_img/Nber_2010_04_08_scan_contour.png}}\ 
+\subfloat[Jour 776]{\includegraphics[width=\largeurfignber]{dcm_img/Nber_2010_07_05__slice-263_20_scan_contour.png}}\ 
+\subfloat[Jour 867]{\includegraphics[width=\largeurfignber]{dcm_img/Nber_2010_10_04__slice-239_40_scan_contour.png}}\ 
+\subfloat[Jour 888]{\includegraphics[width=\largeurfignber]{dcm_img/Nber_2010_10_25__slice-246_60_scan_contour.png}}\ 
+\subfloat[Jour 927]{\includegraphics[width=\largeurfignber]{dcm_img/Nber_2010_12_03_scan_contour.png}}\ 
+\subfloat[Jour 962]{\includegraphics[width=\largeurfignber]{dcm_img/Nber_2011_01_07__slice-221_20_scan_contour.png}}\ 
+\subfloat[Jour 990]{\includegraphics[width=\largeurfignber]{dcm_img/Nber_2011_02_04_scan_contour.png}}\ 
+\subfloat[Jour 1053]{\includegraphics[width=\largeurfignber]{dcm_img/Nber_2011_04_08_scan_contour.png}}\ 
+\subfloat[Jour 1116]{\includegraphics[width=\largeurfignber]{dcm_img/Nber_2011_06_10_scan_contour.png}}\ 
+\subfloat[Jour 1179]{\includegraphics[width=\largeurfignber]{dcm_img/Nber_2011_08_12_scan_contour.png}}
+\caption{\label{fig:contourageNber} Contourage manuel de la tumeur de \Nber. }
+\end{figure}
+
+\begin{figure}
+\centering
+\subfloat[Jour 0]{\includegraphics[width=\largeurfignber]{dcm_img/Chen_2007_05_23_scan_contour.png}}\ 
+\subfloat[Jour 93]{\includegraphics[width=\largeurfignber]{dcm_img/Chen_2007_08_24_scan_contour.png}}\ 
+\subfloat[Jour 182]{\includegraphics[width=\largeurfignber]{dcm_img/Chen_2007_11_21_scan_contour.png}}\ 
+\subfloat[Jour 279]{\includegraphics[width=\largeurfignber]{dcm_img/Chen_2008_02_26_scan_contour.png}}\ 
+\subfloat[Jour 331]{\includegraphics[width=\largeurfignber]{dcm_img/Chen_2008_04_18_scan_contour.png}}\ 
+\subfloat[Jour 429]{\includegraphics[width=\largeurfignber]{dcm_img/Chen_2008_07_25_scan_contour.png}}\ 
+\subfloat[Jour 614]{\includegraphics[width=\largeurfignber]{dcm_img/Chen_2009_01_26_scan_contour.png}}\ 
+\subfloat[Jour 715]{\includegraphics[width=\largeurfignber]{dcm_img/Chen_2009_05_07_scan_contour.png}}\ 
+\subfloat[Jour 845]{\includegraphics[width=\largeurfignber]{dcm_img/Chen_2009_09_14_scan_contour.png}}\ 
+\subfloat[Jour 936]{\includegraphics[width=\largeurfignber]{dcm_img/Chen_2009_12_14_scan_contour.png}}\ 
+\subfloat[Jour 1009]{\includegraphics[width=\largeurfignber]{dcm_img/Chen_2010_02_25_scan_contour.png}}\ 
+\subfloat[Jour 1049]{\includegraphics[width=\largeurfignber]{dcm_img/Chen_2010_04_06_scan_contour.png}}\ 
+\subfloat[Jour 1093]{\includegraphics[width=\largeurfignber]{dcm_img/Chen_2010_05_20_scan_contour.png}}\ 
+\subfloat[Jour 1161]{\includegraphics[width=\largeurfignber]{dcm_img/Chen_2010_07_27_scan_contour.png}}\ 
+\subfloat[Jour 1224]{\includegraphics[width=\largeurfignber]{dcm_img/Chen_2010_09_28_scan_contour.png}}\ 
+\subfloat[Jour 1296]{\includegraphics[width=\largeurfignber]{dcm_img/Chen_2010_12_09_scan_contour.png}}\ 
+\subfloat[Jour 1377]{\includegraphics[width=\largeurfignber]{dcm_img/Chen_2011_02_28_scan_contour.png}}\ 
+\subfloat[Jour 1415]{\includegraphics[width=\largeurfignber]{dcm_img/Chen_2011_04_07_scan_contour.png}}\ 
+\subfloat[Jour 1458]{\includegraphics[width=\largeurfignber]{dcm_img/Chen_2011_05_20_scan_contour.png}}\ 
+\subfloat[Jour 1510]{\includegraphics[width=\largeurfignber]{dcm_img/Chen_2011_07_11_scan_contour.png}}\ 
+\subfloat[Jour 1533]{\includegraphics[width=\largeurfignber]{dcm_img/Chen_2011_08_03_scan_contour.png}}\ 
+\caption{\label{fig:contourageChen} Contourage manuel de la tumeur de \Chen. }
+\end{figure}
+
+
+\begin{figure}
+\centering
+\subfloat[Jour 0]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2008_05_20_histo.png}}\ 
+\subfloat[Jour 119]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2008_09_16_histo.png}}\ 
+\subfloat[Jour 209]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2008_12_15_histo.png}}\ 
+\subfloat[Jour 275]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2009_02_19_histo.png}}\ 
+\subfloat[Jour 331]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2009_04_16_histo.png}}\ 
+\subfloat[Jour 406]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2009_06_30__slice-244_85_histo.png}}\ 
+\subfloat[Jour 493]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2009_09_25_histo.png}}\ 
+\subfloat[Jour 535]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2009_11_06_histo.png}}\ 
+\subfloat[Jour 611]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2010_01_21_histo.png}}\ 
+\subfloat[Jour 688]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2010_04_08_histo.png}}\ 
+\subfloat[Jour 776]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2010_07_05__slice-263_20_histo.png}}\ 
+\subfloat[Jour 867]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2010_10_04__slice-239_40_histo.png}}\ 
+\subfloat[Jour 888]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2010_10_25__slice-246_60_histo.png}}\ 
+\subfloat[Jour 927]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2010_12_03_histo.png}}\ 
+\subfloat[Jour 962]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2011_01_07__slice-221_20_histo.png}}\ 
+\subfloat[Jour 990]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2011_02_04_histo.png}}\ 
+\subfloat[Jour 1053]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2011_04_08_histo.png}}\ 
+\subfloat[Jour 1116]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2011_06_10_histo.png}}\ 
+\subfloat[Jour 1179]{\includegraphics[width=\largeurfignber]{histo_dcm/Nber_2011_08_12_histo.png}}
+\caption{\label{fig:histo_dcm_Nber} Histogramme clinique de la tumeur de \Nber. }
+\end{figure}
+
+\begin{figure}
+\centering
+\subfloat[Jour 0]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2007_05_23_histo.png}}\ 
+\subfloat[Jour 93]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2007_08_24_histo.png}}\ 
+\subfloat[Jour 182]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2007_11_21_histo.png}}\ 
+\subfloat[Jour 279]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2008_02_26_histo.png}}\ 
+\subfloat[Jour 331]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2008_04_18_histo.png}}\ 
+\subfloat[Jour 429]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2008_07_25_histo.png}}\ 
+\subfloat[Jour 614]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2009_01_26_histo.png}}\ 
+\subfloat[Jour 715]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2009_05_07_histo.png}}\ 
+\subfloat[Jour 845]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2009_09_14_histo.png}}\ 
+\subfloat[Jour 936]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2009_12_14_histo.png}}\ 
+\subfloat[Jour 1009]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2010_02_25_histo.png}}\ 
+\subfloat[Jour 1049]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2010_04_06_histo.png}}\ 
+\subfloat[Jour 1093]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2010_05_20_histo.png}}\ 
+\subfloat[Jour 1161]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2010_07_27_histo.png}}\ 
+\subfloat[Jour 1224]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2010_09_28_histo.png}}\ 
+\subfloat[Jour 1296]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2010_12_09_histo.png}}\ 
+\subfloat[Jour 1377]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2011_02_28_histo.png}}\ 
+\subfloat[Jour 1415]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2011_04_07_histo.png}}\ 
+\subfloat[Jour 1458]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2011_05_20_histo.png}}\ 
+\subfloat[Jour 1510]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2011_07_11_histo.png}}\ 
+\subfloat[Jour 1533]{\includegraphics[width=\largeurfignber]{histo_dcm/Chen_2011_08_03_histo.png}}\ 
+\caption{\label{fig:histo_dcm_Chen} Histogramme clinique de la tumeur de \Chen. }
+\end{figure}
+
+
+
 Le but de ce chapitre est de mettre en exergue l'aspect \heterogene de certaines tumeurs. Sur les scanners dont il est question d'\hetero, on voit clairement deux composantes distinctes de niveaux gris qui se dégagent au sein de la tumeur. Nous avons donc choisi de décrire chacun des histogrammes (que l'on a au préalable normalisés) à l'aide d'une somme de deux gaussiennes~:
 \begin{equation}
 \label{eq:decomp_gaussienne}
@@ -82,32 +187,24 @@ Quelquesoit $\theta$, l'intégrale de $g$ vaut 1 (\cf REFF).
 \todo[noline]{demo ou ref : integ gaussienne = 1}
 Ainsi la vraissemblance est le produit des probabilités que chacun des éléments de $X$ appartiennent à la distribution définit par le paramètre $\theta$.
 
-\section{a revoir}
-%\lettrine[lines=2, lhang=0.33, loversize=0.25]{$\mathscr{D}$}{ans} 
-\lettrine[lines=2, lhang=0.33, loversize=0.25]{D}{ans} 
-tout ce chapitre, on considère l'approximation en un mélange de deux  gaussiennes d'un histogramme de niveau gris. Ce mélange gaussien est entièrement décrit par les paramètres suivants:
-\begin{itemize}
-\item $c_1, c_2$ : Centre des gaussiennes.
-%% Sans pertes de généralité on peut admettre que l'on a ordonné les gaussienne \ie $c_1<c_2$.
-\item $\sigma_1,\sigma_2$ : Ecart-type de chacune des gaussiennes
-\item $w_1,w_2$ : Poids associées aux gaussiennes dans le mélange ($w_1+w_2=1$)
-\end{itemize}
-On peut ainsi définir plusieurs quantités caractéristiques :
-\begin{itemize}
-\item $h_1,h_2$ : Hauteur des gaussiennes. Elles sont données par $h_i = \frac{w_i}{\sigma_i\sqrt{2\pi}}$
-\end{itemize}
+
+Sur la Figure~\ref{fig:contourageNber}, sont présentés l'ensemble des contourages réalisé --- avec les histogrammes associés, eux même représenté par un mélange bi-gaussien.
+
+
+\section{Définition d'une fonction objectif à reproduire}
+On considère désormais l'approximation en un mélange de deux gaussiennes les histogrammes de niveau gris provenant de nos images. 
 Notons $\Delta$ l'opérateur de différence défini par :
 \begin{equation}
 \label{eq:operateur_delta_gaussienne}
 \Delta :  u \longmapsto \Delta u := u_2 - u_1.
 \end{equation}
-Ainsi les quantités suivantes pourront s'avérée intéressantes à étudier : $\Delta c$, $\Delta \sigma$,  $\Delta \sigma^2$, $\Delta h$, $\Delta w$ représentant respectivement l'écart entre les centres, la différence d'écart-type, la différence des variances, la différence des hauteurs et la diffirences des poids. On pourra aussi regarder le ratio des quantités :
+Ainsi les quantités suivantes pourraient s'avérées intéressantes à étudier : $\Delta c$, $\Delta \sigma$,  $\Delta \sigma^2$, $\Delta h$, $\Delta w$ représentant respectivement l'écart entre les centres, la différence d'écart-type, la différence des variances, la différence des hauteurs et la diffirences des poids. On pourra aussi regarder le ratio des quantités :
 \begin{equation}
 \label{eq:operateur_quotient_gaussienne}
 Q :  u \longmapsto Qu := \dfrac{ \min( u_2 , u_1) }{ \max( u_2 , u_1)  }.
 \end{equation}
 
-\section{Définition d'une fonction objectif à reproduire}
+
 Afin de correctement traduire l'\hetero, il est nécessaire de fournir une fonction objectif que notre critère devra reproduire au mieux. Ainsi, j'ai décidé de catégoriser l'ensemble des scanners de nos patients. Le partage des scanners est ainsi fait en 5 catégories, en associant à chaque catégorie une valeur de l'\hetero $\mathscr{H}$ :
 \begin{itemize}
 \item $\mathscr{H}=0.9$ : très \heterogene
